--- a/listkhoa.html
+++ b/listkhoa.html
@@ -130,7 +130,7 @@
 					</tbody>
 				</table>
 				
-				<a href="../admin.html"><button class="btn btn-success">Trở lại</button></a>
+				<a href="../index.html"><button class="btn btn-success">Trở lại</button></a>
 
                 <div class="hidden" id="buttondelete" onclick="hiddenButton();" style="float: right;"><button class="btn btn-warning" onclick="showForm();" >Xóa Thủ Công</button></div>
                 <div id="formdelete" class="formorder" style="display: none;float: right;">
