--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/asset/css/main.css">
-    <link rel="stylesheet" href="/asset/css/base.css">
-    <link rel="stylesheet" href="/asset/fontawesome-free-5.15.3-web/fontawesome-free-5.15.3-web/css/all.min.css">
-    <link rel="stylesheet" href="/asset/css/admin.css">
+    <link rel="stylesheet" href="asset/css/main.css">
+    <link rel="stylesheet" href="asset/css/base.css">
+    <link rel="stylesheet" href="asset/fontawesome-free-5.15.3-web/fontawesome-free-5.15.3-web/css/all.min.css">
+    <link rel="stylesheet" href="asset/css/admin.css">
 </head>
 
 <body>
@@ -41,7 +41,6 @@
             <!-- <div class="grid"> -->
             <div class="grid__row">
                 <div class="grid__column-2">
-                    <div class="grid__column-2-4">
                         <ul class="bodycontain">
                             <h3 class="headertext">Quản lí</h3>
                             <li class="headerbody"><a href="#">Thống kê</a></li>
@@ -49,22 +48,17 @@
                             <li class="headerbody"><a href="#">Phòng</a></li>
                             <li class="headerbody"><a href="listkhoa.html">Khoa</a></li>
                             <li class="headerbody"><a href="#">Kí túc xá</a></li>
-                        </ul>
-                        <ul class="bodycontain">
                             <li class="headerbody"><a href="#">Môn học</a></li>
                             <li class="headerbody"><a href="#">Ngành học</a></li>
                             <li class="headerbody"><a href="#">Điểm</a></li>
                             <li class="headerbody"><a href="#">Sinh viên</a></li>
                             <li class="headerbody"><a href="#">Giao diện</a></li>
-                        </ul>
-                        <ul class="bodycontain">
                             <li class="headerbody"><a href="">Hệ thống</a></li>
                             <li class="headerbody"><a href="">Thoát</a></li>
                         </ul>
-                    </div>
                 </div>
-
-             </div>       <!-- Biểu đồ -->
+</div>
+        </div>       <!-- Biểu đồ -->
 </body>
 
 </html>
