--- a/listkhoa.html
+++ b/listkhoa.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/asset/js/main.js">
+	<!-- <link rel="stylesheet" href="/asset/js/main.js"> -->
 	<!-- jQuery library -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
@@ -130,7 +131,7 @@
 					</tbody>
 				</table>
 				
-				<a href="../index.html"><button class="btn btn-success">Trở lại</button></a>
+				<a href="index.html"><button class="btn btn-success">Trở lại</button></a>
 
                 <div class="hidden" id="buttondelete" onclick="hiddenButton();" style="float: right;"><button class="btn btn-warning" onclick="showForm();" >Xóa Thủ Công</button></div>
                 <div id="formdelete" class="formorder" style="display: none;float: right;">
@@ -157,19 +158,19 @@
                                 <div class="form-group">
                                     <form method="GET" >
                                         <div class="form-group">
-                                            <label for="name">Tên khoa</label>
+                                            <label for="name">Tên khoa*</label>
                                             <input required type="text" class="form-control" id="code" name="code" placeholder="Nhập tên khoa">
                                         </div>
                                         <div class="form-group">
-                                            <label for="name">Tên trưởng khoa</label>
+                                            <label for="name">Tên trưởng khoa*</label>
                                             <input required="true" type="text" class="form-control" id="numb" name="numb" placeholder="Nhập tên trưởng khoa">
                                         </div>
                                         <div class="form-group">
-                                            <label for="name">Điện thoại</label>
+                                            <label for="name">Điện thoại*</label>
                                             <input required="true" type="text" class="form-control" id="code" name="code" placeholder="Nhập số điện thoại">
                                         </div>
                                         <div class="form-group">
-                                            <label for="name">Năm thành lập</label>
+                                            <label for="name">Năm thành lập*</label>
                                             <input required="true" type="date" class="form-control" id="code" name="code" placeholder="Năm thành lập">
                                         </div>
                                         <a href="#" id="show"><button type="submit" style="margin-top: 10px; float: right;" class="btn btn-success">Lưu</button></a>
@@ -194,19 +195,19 @@
                                 <div class="form-group">
                                     <form method="dialog">
                                         <div class="form-group">
-                                            <label for="name">Tên khoa</label>
+                                            <label for="name">Tên khoa*</label>
                                             <input required="true" type="text" class="form-control" id="code" name="code" value="KHOA TIN">
                                         </div>
                                         <div class="form-group">
-                                            <label for="name">Tên trưởng khoa</label>
+                                            <label for="name">Tên trưởng khoa*</label>
                                             <input required="true" type="text" class="form-control" id="numb" name="numb" value="NGUYỄN VĂN A">
                                         </div>
                                         <div class="form-group">
-                                            <label for="name">Điện thoại</label>
+                                            <label for="name">Điện thoại*</label>
                                             <input required="true" type="text" class="form-control" id="code" name="code" value="0891223121">
                                         </div>
                                         <div class="form-group">
-                                            <label for="name">Năm thành lập</label>
+                                            <label for="name">Năm thành lập*</label>
                                             <input readonly type="text" class="form-control" value="27/12/1999">
                                         </div>
                                         <a href=""><button id="updatesuccess" style="margin-top: 10px; float: right;" class="btn btn-success">Lưu</button></a>
